force-app/main/default/objects/ID_Interaction__c/ID_Interaction__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ID - Interaction</label>
</CustomObject>