force-app/main/default/objects/ID_Interaction__c/fields/Id_RecordType_Interaction_Audit_Planning__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Interaction_Audit_Planning__c</fullName>
    <label>Id RecordType Interaction Audit Planning</label>
    <length>18</length>
    <type>Text</type>
</CustomField>