force-app/main/default/objects/ID_Interaction__c/fields/Id_RecordType_Interaction_Log_Receipt_M__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Interaction_Log_Receipt_M__c</fullName>
    <label>Id RecordType Interaction Log Receipt M</label>
    <length>18</length>
    <type>Text</type>
</CustomField>