force-app/main/default/objects/ID_Interaction__c/fields/Id_RecordType_Interaction_QA_QC_Inspecti__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Interaction_QA_QC_Inspecti__c</fullName>
    <label>Id RecordType Interaction QA/QC Inspecti</label>
    <length>18</length>
    <type>Text</type>
</CustomField>