force-app/main/default/objects/ID_Interaction__c/fields/Id_RecordType_Interaction_Qual_R_Insp_Re__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Interaction_Qual_R_Insp_Re__c</fullName>
    <label>Id RecordType Interaction Qual R Insp Re</label>
    <length>18</length>
    <type>Text</type>
</CustomField>