force-app/main/default/objects/ID_Interaction__c/fields/Id_RecordType_Interaction_Quality_R_Insp__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordType_Interaction_Quality_R_Insp__c</fullName>
    <label>Id RecordType Interaction Quality R Insp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>