force-app/main/default/objects/ID_Interaction__c/fields/Id_RecordTypeInteraction_Extra_Notice__c.field-meta.xml
<CustomField>
    <fullName>Id_RecordTypeInteraction_Extra_Notice__c</fullName>
    <label>Id RecordTypeInteraction Extra Notice</label>
    <length>18</length>
    <type>Text</type>
</CustomField>